--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "express": "~4.14.1",
     "mysql": "^2.5.4",
     "node-uuid":"latest",
-    "method-override" : "latest"
+    "method-override" : "latest",
+    "connect-timeout": "latest",
+    "moment": "latest"
   }
 }
