--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/server"
+    "start": "node --max-old-space-size=512 ./bin/server"
   },
   "dependencies": {
     "body-parser": "~1.16.0",
